--- a/css/style.css
+++ b/css/style.css
@@ -396,3 +396,45 @@ hr{
     flex-direction: column;
     background-color: #EADDCF;
 }
+
+.loggin_block2{
+    height: 1000px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;   
+    align-items: center;
+    background-color: #EADDCF;
+}
+
+.loggin_2block2{
+    height: 800px;
+    width: 60%;
+    margin-top: 100px;   
+    display: flex;
+    flex-direction: column;    
+    align-items: center;
+    background-color: #F9F4EF;
+}
+
+.label_name2{
+    font-family: Inter;
+    height: 25px;
+    width: 25px;
+    margin-bottom: 15px;
+}
+
+.label_password2{
+    font-family: Inter;
+    height: 25px;
+    width: 25px;
+    margin-bottom: 15px;
+    margin-top: 15px;
+}
+.label_Email2{
+    font-family: Inter;
+    height: 25px;
+    width: 25px;
+    margin-bottom: 15px;
+    margin-top: 15px;
+}
+
