--- a/css/style.css
+++ b/css/style.css
@@ -194,14 +194,14 @@ nav{
     display: flex;
     flex-direction: column;
     font-family: Inter;
-    background-color: blueviolet;
+    background-color: #EADDCF;
 }
 
 .a7{
     height: 25x;
     width: 100px;
     display: flex;
-    background-color: blueviolet;
+    
     font-family: Inter;
     flex-direction: row;
  
@@ -437,4 +437,86 @@ hr{
     margin-bottom: 15px;
     margin-top: 15px;
 }
+.menu_Block{
+    height: 1000px;
+    width: 100%;
+    background-color: #EADDCF;
+    display: flex;
+    flex-direction: row;
+}
+.menu_sushi_block{
+    height: auto;
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+}
+ 
 
+.menu_sushi{
+   height: 300px;
+   width: 500px;
+  
+   display: flex;
+   flex-direction: row;
+}
+
+.tijden_reservern_tot{
+    height: 100px;
+    width: 475px;
+    margin-top: 100px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+
+    background-color: #EADDCF;
+}
+
+.a15{
+    height: 50px;
+    width: 100px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #F9F4EF;
+}
+
+.a16{
+    height: 50px;
+    width: 100px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #F9F4EF;
+}
+.a17{
+    height: 50px;
+    width: 100px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #F9F4EF;
+}
+
+.reserveren_tafel{
+    height: 75px;
+    margin-top: 75px;
+    width: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #EADDCF;
+}
+
+.tafel{
+    height: 75px;
+    width: 300px;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #F9F4EF;
+}
